--- a/index.html
+++ b/index.html
@@ -1,9 +1,40 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- In your index.html or layout component -->
+    <meta
+      property="og:url"
+      content="https://www.alyaqeen.co.uk/prayer-timetable"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Prayer Timetable - Al-Yaqeen" />
+    <meta
+      property="og:description"
+      content="View monthly prayer timetables and calendar downloads"
+    />
+    <meta
+      property="og:image"
+      content="https://www.alyaqeen.co.uk/path-to-your-image.jpg"
+    />
+
+    <!-- For Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:url"
+      content="https://www.alyaqeen.co.uk/prayer-timetable"
+    />
+    <meta name="twitter:title" content="Prayer Timetable - Al-Yaqeen" />
+    <meta
+      name="twitter:description"
+      content="View monthly prayer timetables and calendar downloads"
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.alyaqeen.co.uk/path-to-your-image.jpg"
+    />
     <title>Alyaqeen Academy</title>
   </head>
   <body>
